tests/ui/stdlib-unit-tests/atomic-from-mut-not-available.alignment_mismatch.stderr
error[E0599]: no associated function or constant named `from_mut` found for struct `Atomic<u64>` in the current scope
  --> $DIR/atomic-from-mut-not-available.rs:24:36
   |
LL |     core::sync::atomic::AtomicU64::from_mut(&mut 0u64);
   |                                    ^^^^^^^^ associated function or constant not found in `Atomic<u64>`
   |
note: if you're trying to build a new `Atomic<u64>`, consider using `Atomic::<u64>::new` which returns `Atomic<u64>`
  --> $SRC_DIR/core/src/sync/atomic.rs:LL:COL
  ::: $SRC_DIR/core/src/sync/atomic.rs:LL:COL
   |
   = note: in this macro invocation
   = note: the associated function or constant was found for
           - `Atomic<*mut T>`
           - `Atomic<bool>`
           - `Atomic<i16>`
           - `Atomic<i32>`
           and 6 more types
   = note: this error originates in the macro `atomic_int` (in Nightly builds, run with -Z macro-backtrace for more info)
help: there is an associated function `from` with a similar name
   |
LL -     core::sync::atomic::AtomicU64::from_mut(&mut 0u64);
LL +     core::sync::atomic::AtomicU64::from(&mut 0u64);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
